# atlas

./: .gitignore  CLAUDE.md  GUIA_PUBLICACAO_PLAY_STORE.md  app-fitness-especificacao-completa.md  docker-compose.yml
backend/: .env.example  Procfile  README.md  nixpacks.toml  pyproject.toml  requirements.txt  sim_users.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_fase0_fundacao.py  0002_fase1_nutricao.py  0003_fase2_treino.py  0004_fase3_ia_nutricao.py  0005_fase5_social.py  0006_fase6_sono.py  0007_ai_free_credits.py  0008_food_search_text.py  0009_exercise_is_compound.py  0010_routine_id_nullable_on_delete_set_null.py  0011_set_type_feeder.py
backend/app/: main.py
backend/app/ai/: client.py  diet_ai.py  diet_engine.py  methods.py  methods_ai.py  methods_engine.py  orchestrator.py  system_prompt.py  tools.py  vision.py
backend/app/coaching/: __init__.py  chat.py  chat_tools.py  cycle_state.py  engine.py  metrics.py  overlays.py  training_brain.py  volume_landmarks.py  workout_builder.py
backend/app/core/: config.py  db.py  security.py  text.py
backend/app/data/: arvo_methods_report.txt  curated_50.py  diet_templates.py  exercise_seed.csv  exercise_translator.py  exercisedb_catalog.json  exercisedb_map.py  food_roles.py  taco_seed.csv
backend/app/models/: __init__.py  block.py  body_measurement.py  calorie_goal.py  challenge.py  chat_message.py  coaching_action.py  coaching_adjustment.py  coaching_baseline.py  coaching_technique_cue.py  coaching_transition.py  consent.py  content_report.py  exercise.py  feed.py  food.py  friend_request.py  (+11 more)
(+216 files in other folders)
